fix: text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -294,6 +294,7 @@ pre {
     right: unset;
     width: 100%;
     height: 20vh;
+    padding: 50px 0px !important;
     text-align: center;
     font-size: 0.6em;
   }
